2015-12-10 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/wchar.h:
	  A basic wchar.h with for types that are useful even with no wide character functions around.

2015-12-05 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCerr.c
	* src/SDCCerr.h
	  Fix a bug of type definition of a function by typedef.

2015-12-02 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCerr.c
	* src/SDCCerr.h
	  Fix defects in previous commit.

2015-12-01 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCerr.c
	* src/SDCCerr.h
	  Remove warning #220 (W_ANONYMOUS_MEMBER).

2015-11-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCpeeph.c:
	  Fix operandsNotRelated() bug #2435.
	* device/include/stddef.h,
	  device/include/stdlib.h,
	  src/SDCC.lex,
	  src/SDCCmain.c,
	  src/SDCCval.c,
	  src/SDCCval.h,
	  support/regression/tests/charconst.c,
	  support/regression/tests/string.c:
	  Make wchar_t UTF-32.
	* support/cpp/Makefile.in:
	  Fix call to make.

2015-11-26 Ben Shi <powerstudio1st AT 163 DOT com>
	* support/regression/tests/gcc-torture-execute-20050111-1.c
	* support/regression/tests/gcc-torture-execute-950511-1.c
	  Disable test cases.

2015-11-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCicode.c
	* src/SDCCval.c
	* src/SDCCval.h
	  Improve long long multiplication.
	* support/regression/tests/gcc-torture-execute-20050111-1.c
	* support/regression/tests/gcc-torture-execute-950511-1.c
	* support/regression/tests/longlong.c
	  Improve test cases.

2015-11-14 Philipp Klaus Krause <pkk AT spth.de>

	* doc/Makefile.in,
	  doc/sdccman.lyx:
	  Fix bookmarks and hyperlinks in manual, bug #2405.
	* src/SDCCglue.c:
	  Drop build time in asm output to ease reproducible builds.
	* device/lib/*/Makefile.in,
	  device/lib/Makefile.in:
	  Drop build time in sdar calls to make non-pic lib builds reproducible.

2015-11-13 Ben Shi <powerstudio1st AT 163 DOT com>

	* support/cpp/libcpp/include/symtab.h:
	  Fix build failure on MacOS x86-64.