@@ -50,6 +50,7 @@ typedef struct ast
   unsigned lvalue:1;
   unsigned initMode:1;
   unsigned reversed:1;
+  unsigned parmProcessed:1;
   int level;                    /* level for expr */
   int block;                    /* block number   */
   int seqPoint;                 /* sequence point */
