@@ -1,3 +1,10 @@
+2015-12-14 Ben Shi <powerstudio1st AT 163 DOT com>
+
+	* src/SDCCast.c:
+	  Avoid redundant call to processParms().
+	* support/regression/tests/bug-2436.c
+	  Add a new test case.
+
 2015-12-10 Philipp Klaus Krause <pkk AT spth.de>
 
 	* device/include/wchar.h:
